--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<html>
+<html ng-app="myFirstApp">
     <head>
         <meta charset="utf-8">
         <title>Hello Angular</title>
+        <script src="angular.min.js" />
+        <script src="app.js" />
     </head>
     <body>
-        <h1>Hello Angular - Test</h1>
+        <div ng-controller="MyFirstController">
+
+        </div>
     </body>
 </html>
